Bugfix : z-index des popovers dans les modales bootstrap.
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/branches/owsi-core-0.8-MAINTENANCE@2333 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/jqueryui/jquery-ui-1.8.23.custom.css
+++ b/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/jqueryui/jquery-ui-1.8.23.custom.css
@@ -602,7 +602,10 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 }
 .ui-widget.ui-autocomplete {
 	font-size: 1em;
-	z-index: 151; /* Pour modales Bootstrap */
+}
+/* Bugfix Autocomplete/Popover dans modales Bootstrap */
+.ui-widget.ui-autocomplete, .popover {
+	z-index: 151;
 }
 /* Month picker */
 .ui-monthpicker select.ui-datepicker-year {
